Fix linting errors and update depricated eventRecorder with Updated EventSpec API
