# poollet/bucketpoollet/controllers/bucket_controller.go
@@ -17,7 +17,7 @@ import (
 	irimeta "github.com/ironcore-dev/ironcore/iri/apis/meta/v1alpha1"
 	bucketpoolletv1alpha1 "github.com/ironcore-dev/ironcore/poollet/bucketpoollet/api/v1alpha1"
 	"github.com/ironcore-dev/ironcore/poollet/bucketpoollet/bcm"
-	"github.com/ironcore-dev/ironcore/poollet/bucketpoollet/controllers/events"
+	bucketpoolletEvents "github.com/ironcore-dev/ironcore/poollet/bucketpoollet/controllers/events"
 	poolletutils "github.com/ironcore-dev/ironcore/poollet/common/utils"
 
 	ironcoreclient "github.com/ironcore-dev/ironcore/utils/client"
@@ -30,7 +30,8 @@ import (
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 	"k8s.io/apimachinery/pkg/runtime"
 	"k8s.io/apimachinery/pkg/types"
-	"k8s.io/client-go/tools/record"
+	v1 "k8s.io/client-go/applyconfigurations/core/v1"
+	"k8s.io/client-go/tools/events"
 	ctrl "sigs.k8s.io/controller-runtime"
 	"sigs.k8s.io/controller-runtime/pkg/builder"
 	"sigs.k8s.io/controller-runtime/pkg/client"
@@ -40,7 +41,7 @@ import (
 )
 
 type BucketReconciler struct {
-	record.EventRecorder
+	events.EventRecorder
 	client.Client
 	Scheme *runtime.Scheme
 
@@ -254,7 +255,7 @@ func (r *BucketReconciler) prepareIRIBucketClass(ctx context.Context, bucket *st
 			return "", false, fmt.Errorf("error getting bucket class %s: %w", bucketClassName, err)
 		}
 
-		r.Eventf(bucket, corev1.EventTypeNormal, events.BucketClassNotReady, "Bucket class %s not found", bucketClassName)
+		r.Eventf(bucket, nil, corev1.EventTypeNormal, bucketpoolletEvents.BucketClassNotReady, "Bucket class %s not found", bucketClassName)
 		return "", false, nil
 	}
 
@@ -407,29 +408,16 @@ func (r *BucketReconciler) updateStatus(ctx context.Context, log logr.Logger, bu
 
 			if iriAccess.SecretData != nil {
 				log.V(1).Info("Applying bucket secret")
-				bucketSecret := &corev1.Secret{
-					TypeMeta: metav1.TypeMeta{
-						APIVersion: corev1.SchemeGroupVersion.String(),
-						Kind:       "Secret",
-					},
-					ObjectMeta: metav1.ObjectMeta{
-						Namespace: bucket.Namespace,
-						Name:      string(bucket.UID),
-						Labels: map[string]string{
-							bucketpoolletv1alpha1.BucketUIDLabel: string(bucket.UID),
-						},
-					},
-					Data: iriAccess.SecretData,
-				}
-
-				if err := ctrl.SetControllerReference(bucket, bucketSecret, r.Scheme); err != nil {
-					return fmt.Errorf("error setting controller reference on bucket secret: %w", err)
-				}
-
-				if err := r.Patch(ctx, bucketSecret, client.Apply, client.FieldOwner(bucketpoolletv1alpha1.FieldOwner)); err != nil {
+				secretName := string(bucket.UID)
+				bucketSecretApply := v1.Secret(secretName, bucket.Namespace).
+					WithLabels(map[string]string{
+						bucketpoolletv1alpha1.BucketUIDLabel: string(bucket.UID),
+					}).
+					WithData(iriAccess.SecretData)
+				if err := r.Apply(ctx, bucketSecretApply, client.FieldOwner(bucketpoolletv1alpha1.FieldOwner), client.ForceOwnership); err != nil {
 					return fmt.Errorf("error applying bucket secret: %w", err)
 				}
-				secretRef = &corev1.LocalObjectReference{Name: bucketSecret.Name}
+				secretRef = &corev1.LocalObjectReference{Name: secretName}
 			} else {
 				log.V(1).Info("Deleting any corresponding bucket secret")
 				if err := r.DeleteAllOf(ctx, &corev1.Secret{},
